--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^6.3.3",
     "multer": "^1.4.4",
+    "require": "^2.4.20",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
