--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^2.18.3",
     "aws-amplify": "^4.3.24",
+    "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.30.0",
     "cookie-parser": "^1.4.6",
